feat: auto-complete payments without ops toolbox